--- a/configs/configs_test.yml
+++ b/configs/configs_test.yml
@@ -1,6 +1,9 @@
 port: 8900
 load_balancer_strategy: "round_robin"
 health_check_interval_seconds: 3
+rate_limiter_enabled: True
+rate_limit_tokens: 10
+rate_limit_interval_seconds: 10
 servers:
 - url: http://localhost:8080
   health_url: http://localhost:8080/health
